# amazonka

./: .bazelignore  .bazelrc  .bazelrc.ci  .bazelrc.main  .envrc  .ghci  .gitignore  .hlint.yaml  .ormolu  .stylish-haskell.yaml  .travis.yml  404.html  BUILD.bazel  CHANGELOG.md  CNAME  CONTRIBUTORS  Makefile  README.md  Vagrantfile  WORKSPACE  amazonka.cabal  aws-haskell.cabal  cabal.project  ci.nix  default.nix  flake.nix  generate.nix  haws.cabal  index.html  index.json  index.xml  shell.nix  sitemap.xml  sources.txt  stack-7.10.1.yaml  stack-7.10.2.yaml  stack-7.10.3.yaml  stack-7.8.4.yaml  stack-8.0.1.yaml  stack-8.0.2.yaml  (+10 more)
amazonka-alexa-business/: BUILD.bazel  README.md  amazonka-alexa-business.cabal  default.nix
amazonka-alexa-business/fixture/: GetConferencePreference.yaml
amazonka-alexa-business/test/: Main.hs
amazonka-apigateway/: BUILD.bazel  README.md  amazonka-apigateway.cabal  default.nix
amazonka-apigateway/fixture/: CreateRestAPI.yaml  CreateRestAPIResponse.proto  CreateStage.yaml  DeleteApiKey.yaml  PutGatewayResponse.yaml  UpdateResource.yaml
amazonka-apigateway/test/: Main.hs
amazonka-application-autoscaling/: BUILD.bazel  README.md  amazonka-application-autoscaling.cabal  default.nix
amazonka-application-autoscaling/test/: Main.hs
amazonka-appstream/: BUILD.bazel  README.md  amazonka-appstream.cabal  default.nix
amazonka-appstream/fixture/: CreateFleet.yaml
amazonka-appstream/test/: Main.hs
amazonka-appsync/: BUILD.bazel  README.md  amazonka-appsync.cabal  default.nix
amazonka-appsync/fixture/: UpdateApiKey.yaml
amazonka-appsync/test/: Main.hs
amazonka-athena/: BUILD.bazel  README.md  amazonka-athena.cabal  default.nix
amazonka-athena/fixture/: UntagResource.yaml
amazonka-athena/test/: Main.hs
amazonka-autoscaling/: BUILD.bazel  README.md  amazonka-autoscaling.cabal  default.nix
amazonka-autoscaling-plans/: BUILD.bazel  README.md  amazonka-autoscaling-plans.cabal  default.nix
amazonka-autoscaling-plans/fixture/: GetScalingPlanResourceForecastData.yaml
amazonka-autoscaling-plans/test/: Main.hs
amazonka-autoscaling/example/: amazonka-autoscaling-example.cabal  stack.yaml
amazonka-autoscaling/examples/: Makefile  amazonka-autoscaling-examples.cabal  stack.yaml
amazonka-autoscaling/test/: Main.hs
amazonka-batch/: BUILD.bazel  README.md  amazonka-batch.cabal  default.nix
amazonka-batch/test/: Main.hs
amazonka-budgets/: BUILD.bazel  README.md  amazonka-budgets.cabal  default.nix
amazonka-budgets/fixture/: ExecuteBudgetAction.yaml
amazonka-budgets/test/: Main.hs
amazonka-certificatemanager-pca/: BUILD.bazel  README.md  amazonka-certificatemanager-pca.cabal  default.nix
amazonka-certificatemanager-pca/fixture/: CreatePermission.yaml
amazonka-certificatemanager-pca/test/: Main.hs
amazonka-cloud9/: BUILD.bazel  README.md  amazonka-cloud9.cabal  default.nix
amazonka-cloud9/fixture/: ListTagsForResource.yaml
amazonka-cloud9/test/: Main.hs
amazonka-clouddirectory/: BUILD.bazel  README.md  amazonka-clouddirectory.cabal  default.nix
amazonka-clouddirectory/fixture/: CreateSchema.yaml  GetObjectAttributes.yaml
amazonka-clouddirectory/test/: Main.hs
amazonka-cloudformation/: BUILD.bazel  README.md  amazonka-cloudformation.cabal  default.nix
amazonka-cloudformation/example/: amazonka-cloudformation-example.cabal  stack.yaml
amazonka-cloudformation/examples/: Makefile  amazonka-cloudformation-examples.cabal  load-balanced-apache.json  stack.yaml
amazonka-cloudformation/test/: Main.hs
amazonka-cloudfront/: BUILD.bazel  README.md  amazonka-cloudfront.cabal  default.nix
amazonka-cloudfront/example/: amazonka-cloudfront-example.cabal  stack.yaml
amazonka-cloudfront/examples/: Makefile  amazonka-cloudfront-examples.cabal  stack.yaml
amazonka-cloudfront/fixture/: GetDistributionConfig.yaml  ListDistributionsByRealtimeLogConfig.yaml
amazonka-cloudfront/test/: Main.hs
amazonka-cloudhsm/: BUILD.bazel  README.md  amazonka-cloudhsm.cabal  default.nix
amazonka-cloudhsm/example/: amazonka-cloudhsm-example.cabal  stack.yaml
amazonka-cloudhsm/examples/: Makefile  amazonka-cloudhsm-examples.cabal  stack.yaml
amazonka-cloudhsm/fixture/: DescribeHsm.yaml
amazonka-cloudhsm/test/: Main.hs
amazonka-cloudhsmv2/: BUILD.bazel  README.md  amazonka-cloudhsmv2.cabal  default.nix
amazonka-cloudhsmv2/test/: Main.hs
amazonka-cloudsearch/: BUILD.bazel  README.md  amazonka-cloudsearch.cabal  default.nix
amazonka-cloudsearch-domains/: BUILD.bazel  README.md  amazonka-cloudsearch-domains.cabal  default.nix
amazonka-cloudsearch-domains/example/: amazonka-cloudsearch-domains-example.cabal  stack.yaml
amazonka-cloudsearch-domains/examples/: Makefile  amazonka-cloudsearch-domains-examples.cabal  amazonka-cloudsearchdomains-examples.cabal  stack.yaml
amazonka-cloudsearch-domains/fixture/: UploadDocuments.yaml
amazonka-cloudsearch-domains/test/: Main.hs
amazonka-cloudsearch/example/: amazonka-cloudsearch-example.cabal  stack.yaml
amazonka-cloudsearch/examples/: Makefile  amazonka-cloudsearch-examples.cabal  stack.yaml
amazonka-cloudsearch/fixture/: DescribeIndexFields.yaml
amazonka-cloudsearch/test/: Main.hs
amazonka-cloudtrail/: BUILD.bazel  README.md  amazonka-cloudtrail.cabal  default.nix
amazonka-cloudtrail/example/: amazonka-cloudtrail-example.cabal  stack.yaml
amazonka-cloudtrail/examples/: Makefile  amazonka-cloudtrail-examples.cabal  stack.yaml
amazonka-cloudtrail/test/: Main.hs
amazonka-cloudwatch/: BUILD.bazel  README.md  amazonka-cloudwatch.cabal  default.nix
amazonka-cloudwatch-events/: BUILD.bazel  README.md  amazonka-cloudwatch-events.cabal  default.nix
amazonka-cloudwatch-events/fixture/: TestEventPattern.yaml
amazonka-cloudwatch-events/test/: Main.hs
amazonka-cloudwatch-logs/: BUILD.bazel  README.md  amazonka-cloudwatch-logs.cabal  default.nix
amazonka-cloudwatch-logs/example/: stack.yaml  (+1 more)
amazonka-codebuild/: BUILD.bazel  README.md  amazonka-codebuild.cabal  default.nix
amazonka-codecommit/: BUILD.bazel  README.md  amazonka-codecommit.cabal  default.nix
(+148846 files in other folders)
