package(default_visibility = ["//visibility:public"])

#
# Buildifier
#

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
    mode = "fix",
    verbose = True,
)

#
# Gazelle/Cabal
#

load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:cabal_extra_libraries z=@zlib.dev//:zlib
gazelle(
    name = "gazelle",
    data = ["@io_tweag_gazelle_cabal//cabalscan"],
    gazelle = ":gazelle_binary",
)

gazelle(
    name = "gazelle-update-repos",
    command = "update-repos",
    data = ["@io_tweag_gazelle_cabal//cabalscan"],
    extra_args = [
        "-lang",
        "gazelle_cabal",
        "stackage",
    ],
    gazelle = ":gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = ["@io_tweag_gazelle_cabal//gazelle_cabal"],
)
