package(default_visibility = ["//visibility:public"])

#
# Buildifier
#

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
    mode = "fix",
    verbose = True,
)

#
# Gazelle
#

load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:exclude dist-newstyle
# gazelle:exclude tmp*
# gazelle:cabal_extra_libraries z=@zlib.dev//:zlib
# gazelle:cabal_haskell_package_repo stackage

gazelle(
    name = "gazelle",
    data = ["@io_tweag_gazelle_cabal//cabalscan"],
    gazelle = ":gazelle_binary",
)

gazelle(
    name = "gazelle-update-repos",
    command = "update-repos",
    data = ["@io_tweag_gazelle_cabal//cabalscan"],
    extra_args = [
        "-lang",
        "gazelle_cabal",
        "stackage",
    ],
    gazelle = ":gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = ["@io_tweag_gazelle_cabal//gazelle_cabal"],
)

#
# Haskell
#

load("@rules_haskell//haskell:defs.bzl", "haskell_repl")

# If you want a repl for an amazonka-* package use the @repl target.
# For example:
#   bazel run //lib/services/amazonka-s3:amazonka-s3@repl
haskell_repl(
    name = "repl",
    deps = [
        "//gen:lib",
        "//lib/amazonka",
    ],
)
