name:                  amazonka
version:               0.1.0
synopsis:              Interfaces to various Amazon Web Service APIs
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Network.AWS
        Network.AWS.Internal
      , Network.AWS.Internal.Instances
      , Network.AWS.Internal.Monad
      , Network.AWS.Internal.Signing
      , Network.AWS.Internal.String
      , Network.AWS.Internal.Types

      -- , Network.AWS.AutoScaling
      -- , Network.AWS.AutoScaling.Types

      , Network.AWS.EC2
      , Network.AWS.EC2.Metadata
      , Network.AWS.EC2.Types

      , Network.AWS.Route53
      , Network.AWS.Route53.Types

      -- , Network.AWS.S3
      -- , Network.AWS.S3.Types

      -- , Network.AWS.CloudWatch
      -- , Network.AWS.CloudWatch.Types

      -- , Network.AWS.ELB
      -- , Network.AWS.ELB.Types

      -- , Network.AWS.IAM
      -- , Network.AWS.IAM.Types

    ghc-options:
        -Wall
        -rtsopts
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        aeson
      , base                  >= 4.6 && < 5
      , base64-bytestring
      , bytestring
      , containers
      , errors
      , hexpat-pickle-generic
      , HsOpenSSL
      , http-streams
      , http-types
      , io-streams
      , mtl
      , old-locale
      , pipes                 >= 4.0
      , querystring-pickle
      , SHA
      , strings
      , text
      , time
      , transformers
      , unordered-containers

test-suite amazonka-tests
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:
        -Wall
        -fwarn-tabs

    build-depends:
        aeson
      , amazonka
      , attoparsec
      , base                       >= 4.6 && < 5
      , bytestring
      , containers
      , derive
      , directory
      , hastache
      , http-types
      , HUnit
      , natural-sort
      , old-locale
      , QuickCheck                 >= 2.5.1.1
      , querystring-pickle
      , template-haskell
      , test-framework             >= 0.8
      , test-framework-hunit       >= 0.3
      , test-framework-quickcheck2 >= 0.3
      , text
      , time
      , transformers
      , unordered-containers
      , vector
