name:                  amazonka
version:               0.1.0
synopsis:              Interfaces to various Amazon Web Service APIs
homepage:              http://github.com/brendanhay/amazonka
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013 Brendan Hay, Toralf Wittner
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Network.AWS
      , Network.AWS.Headers

      , Network.AWS.AutoScaling
      , Network.AWS.CloudWatch
      , Network.AWS.EC2
      , Network.AWS.EC2.Metadata
      , Network.AWS.ELB
      , Network.AWS.IAM
      , Network.AWS.Route53
      , Network.AWS.S3

    other-modules:
        Network.AWS.Internal
      , Network.AWS.Internal.Instances
      , Network.AWS.Internal.Monadic
      , Network.AWS.Internal.Request
      , Network.AWS.Internal.Signing
      , Network.AWS.Internal.String
      , Network.AWS.Internal.Time
      , Network.AWS.Internal.Types
      , Network.AWS.Internal.XML

      , Network.AWS.AutoScaling.Types
      , Network.AWS.CloudWatch.Types
      , Network.AWS.EC2.Types
      , Network.AWS.ELB.Types
      , Network.AWS.IAM.Types
      , Network.AWS.Route53.Types
      , Network.AWS.S3.Types

    ghc-options:
        -Wall -fwarn-tabs -funbox-strict-fields

    build-depends:
        aeson
      , async
      , base                  >= 4.6 && < 5
      , base16-bytestring
      , base64-bytestring
      , bytestring
      , case-insensitive
      , containers
      , cryptohash
      , errors
      , hexpat-pickle-generic
      , HsOpenSSL
      , http-common
      , http-streams          >= 0.7.0.2
      , http-types
      , io-streams
      , mtl
      , old-locale
      , pipes                 >= 4.0
      , querystring-pickle
      , text
      , time
      , transformers
      , unordered-containers

test-suite amazonka-tests
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:
        -Wall -fwarn-tabs

    build-depends:
        aeson
      , amazonka
      , attoparsec
      , base                       >= 4.6 && < 5
      , bytestring
      , containers
      , derive
      , directory
      , hastache
      , http-types
      , HUnit
      , natural-sort
      , old-locale
      , QuickCheck                 >= 2.5.1.1
      , querystring-pickle         >= 0.1.7
      , template-haskell
      , test-framework             >= 0.8
      , test-framework-hunit       >= 0.3
      , test-framework-quickcheck2 >= 0.3
      , text
      , time
      , transformers
      , unordered-containers
      , vector
