name:                  amazonka
version:               0.1.7
synopsis:              Interfaces to various Amazon Web Service APIs
homepage:              http://github.com/brendanhay/amazonka
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013 Brendan Hay, Toralf Wittner
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    ghc-options:       -Wall -O2

    exposed-modules:
        Network.AWS
      , Network.AWS.Auth
      , Network.AWS.Internal
      , Network.AWS.Headers

      , Network.AWS.AutoScaling
      , Network.AWS.CloudWatch
      , Network.AWS.EC2
      , Network.AWS.EC2.Metadata
      , Network.AWS.ELB
      , Network.AWS.IAM
      , Network.AWS.Route53
      , Network.AWS.S3

    other-modules:
        Network.AWS.Internal.Instances
      , Network.AWS.Internal.Request
      , Network.AWS.Internal.Signing
      , Network.AWS.Internal.String
      , Network.AWS.Internal.Time
      , Network.AWS.Internal.Types
      , Network.AWS.Internal.XML

      , Network.AWS.AutoScaling.Types
      , Network.AWS.CloudWatch.Types
      , Network.AWS.EC2.Types
      , Network.AWS.ELB.Types
      , Network.AWS.IAM.Types
      , Network.AWS.Route53.Types
      , Network.AWS.S3.Types

      , Text.XML.Expat.Pickle.Generic

    build-depends:
        aeson                 >= 0.7
      , async
      , base                  >= 4.6 && < 5
      , base16-bytestring
      , base64-bytestring
      , bytestring
      , case-insensitive
      , conduit
      , containers
      , cryptohash
      , data-default
      , errors                >= 1.4.4
      , hexpat                >= 0.20
      , http-conduit          >= 2
      , http-types
      , lifted-base
      , mtl
      , old-locale
      , querystring-pickle    >= 0.1.7
      , resourcet
      , text                  >= 1.0
      , time
      , transformers
      , unordered-containers

-- test-suite amazonka-tests
--     default-language:  Haskell2010
--     type:              exitcode-stdio-1.0
--     hs-source-dirs:    test
--     main-is:           Main.hs
--     ghc-options:       -Wall -threaded

--     build-depends:
--         aeson              >= 0.6.2.1
--       , amazonka
--       , base               >= 4.6 && < 5
--       , bytestring
--       , containers
--       , derive
--       , directory
--       , ede
--       , http-types
--       , http-common
--       , natural-sort
--       , old-locale
--       , querystring-pickle >= 0.1.7
--       , tasty
--       , tasty-quickcheck
--       , template-haskell
--       , text
--       , time
--       , transformers
--       , vector
