name:                  aws-haskell
version:               0.1.0
synopsis:              Interfaces to various Amazon Web Service APIs
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              AWS, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

data-files:
      template/Route53/ChangeResourceRecordSets
    , template/Route53/CreateHealthCheck
    , template/Route53/CreateHostedZone

source-repository head
    type:     git
    location: git://github.com/brendanhay/aws-haskell.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src vendor/aeson

    exposed-modules:
        Network.AWS

      , Network.AWS.Internal.IO
      , Network.AWS.Internal.Signing
      , Network.AWS.Internal.String
      , Network.AWS.Internal.TH
      , Network.AWS.Internal.Types
      , Network.AWS.Internal

      -- , Network.AWS.EC2
      -- , Network.AWS.EC2.Metadata
      -- , Network.AWS.EC2.Types
      -- , Network.AWS.EC2.WSDL

      , Network.AWS.AutoScaling
      , Network.AWS.AutoScaling.V20110101
      , Network.AWS.AutoScaling.V20110101.Types

      , Network.AWS.Route53
      , Network.AWS.Route53.V20121212
      , Network.AWS.Route53.V20121212.Types

      , Data.Aeson.Hastache
      , Data.Aeson.XML

      , Paths_aws_haskell

    ghc-options:
        -Wall
        -rtsopts
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        aeson
      , attoparsec
      , base                 >= 4 && < 5
      , base64-bytestring
      , bytestring
      , containers
      , data-default
      , vector
      , hastache
      , HsOpenSSL
      , http-streams
      , http-types
      , hxt
      , hxt-expat
      , hxt-tagsoup
      , io-streams
      , mtl
      , old-locale
      , SHA
      , template-haskell
      , text
      , time
      , transformers
      , unordered-containers

      -- vendor/aeson dependencies
      , blaze-builder        >= 0.2.1.4
      , deepseq
      , hashable             >= 1.1.2.0
      , old-locale
      , syb
      , vector               >= 0.7.1

test-suite aws-haskell-tests
    default-language:  Haskell2010
    hs-source-dirs:    test vendor/aeson
    type:              exitcode-stdio-1.0
    main-is:           Main.hs

    build-depends:
         aeson
       , aws-haskell
       , base
       , bytestring
       , text
       , transformers

      -- vendor/aeson dependencies
      , blaze-builder        >= 0.2.1.4
      , containers
      , deepseq
      , hashable             >= 1.1.2.0
      , old-locale
      , syb
      , vector               >= 0.7.1
      , unordered-containers
      , attoparsec
      , template-haskell
      , time

       , HUnit
       , QuickCheck
       , test-framework             >= 0.3
       , test-framework-quickcheck2 >= 0.3
       , test-framework-hunit       >= 0.3
