name:                  aws-haskell
version:               0.1.0
synopsis:              Interfaces to various Amazon Web Service APIs
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              AWS, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

data-files:
      template/Route53/V20121212/*.tmpl

    , test/response/Route53/V20121212/*.xml

source-repository head
    type:     git
    location: git://github.com/brendanhay/aws-haskell.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Network.AWS

      , Network.AWS.Internal.Generic
      , Network.AWS.Internal.Signing
      , Network.AWS.Internal.String
      , Network.AWS.Internal.TH
      , Network.AWS.Internal.Types
      , Network.AWS.Internal

      -- , Network.AWS.EC2
      -- , Network.AWS.EC2.Metadata
      -- , Network.AWS.EC2.Types
      -- , Network.AWS.EC2.WSDL

      , Network.AWS.AutoScaling
      , Network.AWS.AutoScaling.V20110101
      , Network.AWS.AutoScaling.V20110101.Responses
      , Network.AWS.AutoScaling.V20110101.Types

      , Network.AWS.Route53
      , Network.AWS.Route53.V20121212
      , Network.AWS.Route53.V20121212.Types

      , Paths_aws_haskell

    ghc-options:
        -Wall
        -rtsopts
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        aeson
      , base                 >= 4 && < 5
      , base64-bytestring
      , bytestring
      , containers
      , hastache
      , hexpat-generic
      , HsOpenSSL
      , http-streams
      , http-types
      , io-streams
      , mtl
      , old-locale
      , SHA
      , template-haskell
      , text
      , time
      , transformers
      , unordered-containers

test-suite aws-haskell-tests
    default-language:  Haskell2010
    hs-source-dirs:    test
    type:              exitcode-stdio-1.0
    main-is:           Main.hs

    build-depends:
        aeson
      , aws-haskell
      , base
      , bytestring
      , hexpat-generic
      , old-locale
      , text
      , time
      , transformers

      , HUnit
      , QuickCheck
      , test-framework             >= 0.3
      , test-framework-quickcheck2 >= 0.3
      , test-framework-hunit       >= 0.3
