name:                  aws-haskell
version:               0.1.0
synopsis:              Interfaces to various Amazon Web Service APIs
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              AWS, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

data-files:
      template/Route53/V20121212/*.tmpl

    , test/response/Route53/V20121212/*.xml

source-repository head
    type:     git
    location: git://github.com/brendanhay/aws-haskell.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Network.AWS

      , Network.AWS.Internal.IO
      , Network.AWS.Internal.Instances
      , Network.AWS.Internal.Signing
      , Network.AWS.Internal.String
      , Network.AWS.Internal.TH
      , Network.AWS.Internal.Types
      , Network.AWS.Internal

      -- , Network.AWS.EC2
      , Network.AWS.EC2.Metadata
      -- , Network.AWS.EC2.Types
      -- , Network.AWS.EC2.WSDL

      , Network.AWS.AutoScaling
      , Network.AWS.AutoScaling.V20110101
      , Network.AWS.AutoScaling.V20110101.Responses
      , Network.AWS.AutoScaling.V20110101.Types

      , Network.AWS.Route53
      , Network.AWS.Route53.V20121212
      , Network.AWS.Route53.V20121212.Types

      , Paths_aws_haskell

    ghc-options:
        -Wall
        -rtsopts
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        aeson
      , base                  >= 4.6 && < 5
      , base64-bytestring
      , bytestring
      , containers
      , hastache
      , hexpat-pickle-generic >= 0.1.3
      , HsOpenSSL
      , http-streams
      , http-types
      , io-streams
      , mtl
      , old-locale
      , querystring-pickle    >= 0.1.3
      , SHA
      , template-haskell
      , text
      , time
      , transformers
      , unordered-containers

test-suite aws-haskell-tests
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:
        -Wall
        -fwarn-tabs
        -ddump-splices

    build-depends:
        aws-haskell
      , base                       >= 4.6 && < 5
      , bytestring
      , derive
      , hexpat-pickle-generic      >= 0.1.3
      , HUnit
      , old-locale
      , QuickCheck                 >= 2.5.1.1
      , quickcheck-instances
      , test-framework             >= 0.8
      , test-framework-hunit       >= 0.3
      , test-framework-quickcheck2 >= 0.3
      , text
      , time
      , transformers
