name:                  amazonka-alexa-business
version:               1.6.0
synopsis:              Amazon Alexa For Business SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.AlexaBusiness" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-alexa-business

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.AlexaBusiness
        , Network.AWS.AlexaBusiness.AssociateContactWithAddressBook
        , Network.AWS.AlexaBusiness.AssociateDeviceWithRoom
        , Network.AWS.AlexaBusiness.AssociateSkillGroupWithRoom
        , Network.AWS.AlexaBusiness.CreateAddressBook
        , Network.AWS.AlexaBusiness.CreateContact
        , Network.AWS.AlexaBusiness.CreateProfile
        , Network.AWS.AlexaBusiness.CreateRoom
        , Network.AWS.AlexaBusiness.CreateSkillGroup
        , Network.AWS.AlexaBusiness.CreateUser
        , Network.AWS.AlexaBusiness.DeleteAddressBook
        , Network.AWS.AlexaBusiness.DeleteContact
        , Network.AWS.AlexaBusiness.DeleteProfile
        , Network.AWS.AlexaBusiness.DeleteRoom
        , Network.AWS.AlexaBusiness.DeleteRoomSkillParameter
        , Network.AWS.AlexaBusiness.DeleteSkillGroup
        , Network.AWS.AlexaBusiness.DeleteUser
        , Network.AWS.AlexaBusiness.DisassociateContactFromAddressBook
        , Network.AWS.AlexaBusiness.DisassociateDeviceFromRoom
        , Network.AWS.AlexaBusiness.DisassociateSkillGroupFromRoom
        , Network.AWS.AlexaBusiness.GetAddressBook
        , Network.AWS.AlexaBusiness.GetContact
        , Network.AWS.AlexaBusiness.GetDevice
        , Network.AWS.AlexaBusiness.GetProfile
        , Network.AWS.AlexaBusiness.GetRoom
        , Network.AWS.AlexaBusiness.GetRoomSkillParameter
        , Network.AWS.AlexaBusiness.GetSkillGroup
        , Network.AWS.AlexaBusiness.ListDeviceEvents
        , Network.AWS.AlexaBusiness.ListSkills
        , Network.AWS.AlexaBusiness.ListTags
        , Network.AWS.AlexaBusiness.PutRoomSkillParameter
        , Network.AWS.AlexaBusiness.ResolveRoom
        , Network.AWS.AlexaBusiness.RevokeInvitation
        , Network.AWS.AlexaBusiness.SearchAddressBooks
        , Network.AWS.AlexaBusiness.SearchContacts
        , Network.AWS.AlexaBusiness.SearchDevices
        , Network.AWS.AlexaBusiness.SearchProfiles
        , Network.AWS.AlexaBusiness.SearchRooms
        , Network.AWS.AlexaBusiness.SearchSkillGroups
        , Network.AWS.AlexaBusiness.SearchUsers
        , Network.AWS.AlexaBusiness.SendInvitation
        , Network.AWS.AlexaBusiness.StartDeviceSync
        , Network.AWS.AlexaBusiness.TagResource
        , Network.AWS.AlexaBusiness.Types
        , Network.AWS.AlexaBusiness.UntagResource
        , Network.AWS.AlexaBusiness.UpdateAddressBook
        , Network.AWS.AlexaBusiness.UpdateContact
        , Network.AWS.AlexaBusiness.UpdateDevice
        , Network.AWS.AlexaBusiness.UpdateProfile
        , Network.AWS.AlexaBusiness.UpdateRoom
        , Network.AWS.AlexaBusiness.UpdateSkillGroup
        , Network.AWS.AlexaBusiness.Waiters

    other-modules:
          Network.AWS.AlexaBusiness.Types.Product
        , Network.AWS.AlexaBusiness.Types.Sum

    build-depends:
          amazonka-core == 1.6.0.*
        , base          >= 4.7     && < 5

test-suite amazonka-alexa-business-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.AlexaBusiness
        , Test.AWS.Gen.AlexaBusiness
        , Test.AWS.AlexaBusiness.Internal

    build-depends:
          amazonka-core == 1.6.0.*
        , amazonka-test == 1.6.0.*
        , amazonka-alexa-business
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
